# ccargo

./: Cargo.toml
.cargo/: config.toml
ccargo/: Cargo.toml
ccargo/src/: lib.rs
ccargo/src/cc/: build.rs  cmd.rs  dep_info.rs  error.rs  mod.rs  options.rs  output.rs  platform.rs  supported_flags.rs  toolchain.rs
ccargo/src/core/: compile.rs  config.rs  fingerprint.rs  layout.rs  mod.rs  package.rs  package_id.rs  step.rs  target_name.rs  unit.rs
ccargo/src/toml/: mod.rs
ccargo/src/utils/: byte_find.rs  cached_mtime.rs  color_string.rs  command_ext.rs  graph.rs  interned_string.rs  lev_distance.rs  mod.rs  msg_queue.rs  paths.rs  semver_ext.rs  serde_bin.rs  shell.rs
crates/ccargo-cc-test/: Cargo.toml  build.rs
crates/ccargo-cc-test/src/asm/: aarch64.S  aarch64.asm  armv7.S  i686.asm  main.c  riscv64gc.S  x86_64.S  x86_64.asm
crates/ccargo-cc-test/src/lib/: foo-export.h  foo.c  foo.h  main.c
crates/ccargo-cc-test/src/other/: check_error.c  check_success.c  expand.c  main.cpp  windows.c
crates/ccargo-cc-test/tests/: args.rs  build.rs  output.rs  toolchain.rs
crates/ccargo-cc-test/tests/outputs/linux/clang/colors/: compile_error.stderr.in  compile_error.stderr.out  compile_warning.stderr.out  link_error.stderr.in  link_error.stderr.out  link_warning.stderr.in
crates/ccargo-cc-test/tests/support/: mod.rs
crates/ccargo-platform/: Cargo.toml
crates/ccargo-platform/examples/: matches.rs
crates/ccargo-platform/src/: lib.rs  rustc.rs
crates/ccargo-platform/tests/: test_cfg.rs
(+48 files in other folders)
